fixed the mobile slide-in animation bug! It was not a bug, I had set the negative pixel value for the margin-left to be too far away so it took too long to travel back to zero!

--- a/docs/style.css
+++ b/docs/style.css
@@ -127,9 +127,9 @@ header {
     position: fixed;
     margin-left: -9000px;
     background-color: rgba(241,216,222, 1);
-    transition: margin-left .25s,background-color 500ms cubic-bezier(.55,0,.1,1) 200ms;
+    transition: margin-left 1s, background-color 2s cubic-bezier(.55,0,.1,1) 1s;
     transition-property: margin-left, background-color;
-    transition-duration: .25s, 700ms;
+    transition-duration: 1s, 3s;
     transition-timing-function: ease-out, cubic-bezier(0.55, 0, 0.1, 1);
     transition-timing-function: ease-out, cubic-bezier(0.55, 0, 0.1, 1);
     transition-delay: 0s, 0s;
@@ -148,9 +148,9 @@ header {
     width: 60%;
 }
 .mobile-menu{
-    -webkit-box-sizing: border-box;
+    /* -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    box-sizing: border-box; */
     position: absolute;
     top: 0;
     bottom: 0;
@@ -166,9 +166,9 @@ header {
     color:  #90acaa;
     letter-spacing: .04em;
     line-height: 1.8em;
-    -webkit-box-sizing: border-box;
+    /* -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    box-sizing: border-box; */
     position: relative;
     width: 100%;
     padding-bottom: .618em;
@@ -758,7 +758,9 @@ footer{
     .burger{
         display: block;
     }
-
+    .mobile-menu-back{
+        margin-left: -1400px;
+    }
 
 
 
@@ -873,9 +875,6 @@ footer{
 
 
 @media screen and (max-width: 620px) {
-    /* #intro #how-would-you #about #projects #video #artist-website #metaphor #contact {
-        width: 100%;
-    } */
 
     #intro{
         height: 100vh;
@@ -909,6 +908,9 @@ footer{
     .burger{
         display: block;
     }    
+    .mobile-menu-back{
+        margin-left: -1400px;
+    }
 
 
     #how-would-you{
