--- a/docs/testing-menu-slide/styletest.css
+++ b/docs/testing-menu-slide/styletest.css
@@ -1,15 +1,19 @@
 
-/* 
+
 .mobile-menu-back{
-    margin-left: -90000px;
     position: fixed;
+    margin-left: -9000px;
     background-color: rgba(241,216,222, 1);
+    transition: margin-left .25s,background-color 500ms cubic-bezier(.55,0,.1,1) 200ms;
+    transition-property: margin-left, background-color;
+    transition-duration: .25s, 700ms;
+    transition-timing-function: ease-out, cubic-bezier(0.55, 0, 0.1, 1);
+    transition-timing-function: ease-out, cubic-bezier(0.55, 0, 0.1, 1);
+    transition-delay: 0s, 0s;
     top: 0px;
     bottom: 0px;
-    width: 20%;
+    width: 100%;
     z-index:1000;
-    -webkit-transition: margin 2s ease-in-out;
-    transition: margin 2s ease-in-out;
 }
 .close{
     position: fixed;
@@ -48,7 +52,8 @@
 .mobile-menu a{
     display: block;
 
-} */
+}
+/*
  
 html{
     scroll-behavior: smooth;
@@ -169,9 +174,9 @@ header {
     color: rgba(141, 97, 108, 0.9);
     font-size: 1.5em;
 }
-#closeX:hover{
+/* #closeX:hover{
     
-}
+} */
 
 /* .mobile-menu-back.mobile-menu-show{
     margin-left: 0;
@@ -189,7 +194,7 @@ header {
 } */
 .mobile-menu-back{
     position: fixed;
-    margin-left: -1000px;
+    margin-left: -9000px;
     background-color: rgba(241,216,222, 1);
     transition: margin-left 1s,background-color 1.5s cubic-bezier(.55,0,.1,1);
     transition-property: margin-left, background-color;
@@ -269,4 +274,4 @@ header {
         display: block;
     }    
 
-} */
+}
